# nexus-d20

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  LICENSE.md  Makefile  README.md  ROADMAP.md  SECURITY.md  compose.prod.yaml  compose.yaml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py  seed.py
backend/app/api/: dependencies.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: audits.py  auth.py  campaigns.py  characters.py  rules.py
backend/app/core/: config.py  errors.py
backend/app/domain/rules/: __init__.py  abilities.py  attack.py  durability.py  encumbrance.py  rest.py
backend/app/models/: __init__.py  base.py  core.py
backend/app/schemas/: audit.py  auth.py  campaigns.py  characters.py  rules.py
backend/app/services/: audit.py  auth.py  campaigns.py  characters.py  email.py  password_reset.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_core.py  0002_sessions.py  0003_campaign_invites.py  0004_reversible_audit.py  0005_password_reset.py  0006_characters.py
backend/tests/: test_abilities.py  test_attack.py  test_auth.py  test_campaigns.py  test_characters.py  test_durability.py  test_encumbrance.py  test_rest.py
docs/: API_CONTRACT.md  ARCHITECTURE.md  CODEX_START_PROMPT.md  CONTENT_AND_LICENSE.md  DATA_MODEL.md  DEPLOYMENT.md  DURABILITY_CATALOG.md  GITHUB_SETUP.md  GM_MODULES.md  IMPLEMENTATION_BACKLOG.md  PERMISSIONS.md  PRODUCT_SPEC.md  RULES_ENGINE.md  (+6 more)
(+29 files in other folders)
