[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-d20-api"
version = "0.1.0"
description = "API e motor de regras do Nexus d20"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]==0.139.2",
  "pydantic-settings>=2.10,<3",
  "sqlalchemy[asyncio]>=2.0.41,<3",
  "asyncpg>=0.30,<1",
  "alembic>=1.16,<2",
  "redis>=6.2,<7",
  "boto3>=1.39,<2",
  "pyjwt[crypto]>=2.10,<3",
  "pwdlib[argon2]>=0.2,<1",
  "python-multipart>=0.0.20,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<10",
  "pytest-asyncio>=1.0,<2",
  "httpx>=0.28,<1",
  "ruff>=0.12,<1",
  "mypy>=1.16,<2",
  "coverage[toml]>=7.9,<8",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.ruff.lint.per-file-ignores]
"migrations/**/*.py" = ["E501", "I001", "UP007", "UP035"]
